fix: spacing

--- a/Front-End/src/components/Cadastro/cadastro.module.css
+++ b/Front-End/src/components/Cadastro/cadastro.module.css
@@ -223,6 +223,9 @@
 }
 
 @media screen and (min-width: 1024px) {
+    .cadastro {
+        row-gap: 10rem;
+    }
     .cadastro__form {
         flex-direction: row;
         max-width: 1105px;
